@@ -4,10 +4,7 @@ libvoikko_la_SOURCES = voikko_suggest.c voikko_utils.c voikko_setup.c voikko_spe
                        voikko_tokenize.c sentence.c grammar.c gccache.c \
                        gcerror.c gcanalysis.c
 libvoikko_la_LDFLAGS = -lmalaga -no-undefined -version-info 9:0:8 @LIBLDFLAGSWIN@
-bin_PROGRAMS = voikkospell voikkohyphenate voikkogc
-voikkospell_SOURCES = voikkospell.c porting.c
-voikkospell_CFLAGS = $(AM_CFLAGS)
-voikkospell_LDADD = libvoikko.la
+bin_PROGRAMS = voikkohyphenate voikkogc
 voikkohyphenate_SOURCES = voikkohyphenate.c porting.c
 voikkohyphenate_CFLAGS = $(AM_CFLAGS)
 voikkohyphenate_LDADD = libvoikko.la
