@@ -1,0 +1,4 @@
+bin_PROGRAMS = voikkospell
+voikkospell_SOURCES = voikkospell.cpp ../porting.c
+voikkospell_CFLAGS = $(AM_CFLAGS)
+voikkospell_LDADD = ../libvoikko.la
